# IoT_events_monitoring

./: .dockerignore  .env.test  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.test.yaml  filebeat.yml  main.py  prometheus.yml  pyproject.toml
src/application/use_cases/alerts/: create_alert_usecase.py  find_alert_by_id_usecase.py  search_alert_usecase.py
src/application/use_cases/cross/: process_event_usecase.py
src/application/use_cases/devices/: create_device_usecase.py  delete_device_usecase.py  find_device_by_id_usecase.py  update_device_usecase.py
src/application/use_cases/sensor_event/: create_sensor_event_usecase.py  find_sensor_event_by_id_usecase.py
src/consumer/kafka/: handlers.py  main.py  schemas.py
src/core/: config.py  exceptions.py  logging_config.py  message_consumer.py
src/core/clients/: elastic.py
src/domain/: enums.py
src/domain/alerts/entities/: alert.py
src/domain/alerts/exceptions/: alert_not_found_error.py
src/domain/alerts/interfaces/: alert_repo.py  alert_search_repo.py
src/domain/alerts/value_objects/: alert_id.py
src/domain/devices/entities/: device.py
src/domain/devices/exceptions/: device_not_found_error.py
src/domain/devices/interfaces/: device_repo.py
src/domain/devices/value_objects/: device_id.py
src/domain/sensor_events/entities/: sensor_event.py
src/domain/sensor_events/exceptions/: sensor_event_not_found_error.py  sensor_type_mismatch_error.py
src/domain/sensor_events/interfaces/: sensor_event_repo.py
src/domain/sensor_events/value_objects/: sensor_event_id.py
src/infrastructure/di/: alert_injection.py  container.py  device_injection.py  sensor_event_injection.py
src/infrastructure/di/providers/: alert_providers.py  cross_providers.py  device_providers.py  mongo_providers.py  sensor_event_providers.py
src/infrastructure/elastic/alerts/: indices.py  mappers.py  mappings.py  repo.py  schemas.py
src/infrastructure/messaging/kafka/: __init__.py  kafka_consumer.py
src/infrastructure/mongodb/: __init__.py  database.py
src/infrastructure/mongodb/alerts/: alert_repo.py  orm.py
src/infrastructure/mongodb/devices/: device_repo.py  orm.py
src/monitoring/: metrics.py  middleware.py
tests/: test_producer.py
tests/functional/: conftest.py  test_app.py
tests/functional/devices/: test_create_device_usecase.py  test_delete_device_usecase.py  test_find_device_by_id_usecase.py  test_update_device_usecase.py
tests/integration/: conftest.py
tests/integration/devices/: test_create_device_usecase.py  test_delete_device_usecase.py  test_find_device_by_id_usecase.py  test_update_device_usecase.py
tests/unit/devices/: conftest.py  test_create_device_usecase.py  test_delete_device_usecase.py  test_find_device_by_id_usecase.py  test_update_device_usecase.py
(+16 files in other folders)
