[project]
name = "iot-events-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "aiokafka>=0.12.0",
    "beanie>=1.29.0",
    "dishka[fastapi]>=1.6.0",
    "elasticsearch[async]==8.13.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "prometheus-client>=0.22.1",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.11.5",
    "uvicorn>=0.34.3",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.16.0",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.2",
    "ruff>=0.11.13",
]


[tool.ruff]
line-length = 96
# Group violations by containing file.
output-format = "grouped"
# Enable preview features.
preview = true
# Enumerate all fixed violations.
show-fixes = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Enable preview style formatting.
preview = true
# Prefer single quotes over double quotes.
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "Q", "ANN", "RET", "SLF", "SIM", "UP", "COM", "PL", "PERF", "RUF"]
ignore = ["F402", "E701", "UP032", "Q000", "Q003", "COM812"]

explicit-preview-rules = true

logger-objects = ["logger.logger"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Depends",
    "greyhorse_web.http.fastapi.deps.Provide",
    "greyhorse_web.http.strawberry.extensions.Provide",
    "app.modules.users.components.public.http.utils.AuthDepends",
]

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 10


[tool.mypy]
python_version = "3.12"
files = [
  "src",
  "tests",
]
plugins = "pydantic.mypy"
pretty = true
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = false
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
disable_error_code = [
    "no-redef", "valid-type", "attr-defined", "type-arg", "var-annotated",
    "no-untyped-def", "no-untyped-call", "name-defined", "used-before-def"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
